tiny0/static/style.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Roboto Mono', monospace;
}

body {
    background: #121212;

}

.headers {
    position: absolute;
    left: 0;
    right: 0;
    top: 3vh;
    text-align: center;
}

.title:link {
    color: #bb86fc;
    text-decoration: none;
    font-size: 50px;
    font-weight: bold;
}

.title:visited {
    color: #bb86fc;
}

.title:hover {
    color: #7b59a5;
}

.desc {
    color: #ffffff;
}

.container {
    position: absolute;
    left: 0;
    right: 0;
    background-color: #2c2c2c;
    border-radius: 8px;
    padding: 30px 0px;
    box-shadow: 0px 10px 20px #000000;
    width: 80vw;
    height: auto;
    margin: 35vh auto 0 auto;
}

.inputs {
    display: flex;
    justify-content: center;
}

.url {
    background: #121212;
    border: 2px solid #bb86fc;
    color: #ffffff;
    width: 60%;
    padding: 10px 10px;
    margin-left: 3%;
}

.url:focus {
    border-color: #7b59a5;
}

.button {
    background: #bb86fc;
    border: 2px solid #bb86fc;
    border-radius: 3px;
    color: #000000;
    display: inline-block;
    padding: 0 1% 0 1%;
    margin: 0 3% 0 1%;
}

.button:hover {
    background: #7b59a5;
    border-color: #7b59a5;
}

.url-error-message {
    color: #ffffff;
    text-align: center;
    font-size: 100%;
    padding: 0;
    margin: 3% 0 0 0;
}

.error-message {
    position: absolute;
    left: 0;
    right: 0;
    color: #ffffff;
    text-align: center;
    margin: 40vh auto 0 auto;
}

.donation {
    position: absolute;
    left: 0;
    right: 0;
    color: #ffffff;
    list-style: none;
    text-align: center;
    margin: 40vh auto 0 auto;
}


.page-container {
  position: relative;
  min-height: 100vh;
}

.content-wrap {
  padding-bottom: 2.5rem;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
  margin-bottom: 5vh;
}

.footer-list {
    list-style: none;
    text-align: center;
}

.footer-list li {
    color: #ffffff;
    display: inline;
}

.footer-list li a:link {
    color: #bb86fc;
    text-decoration: none;
}

.footer-list li a:visited {
    color: #bb86fc;
}

.footer-list li a:hover {
    color: #7b59a5;
}

